api sorting working well
