# app/Http/Controllers/Api/V1/ArticleCommentController.php
@@ -8,6 +8,7 @@ use App\Models\Article;
 use Illuminate\Http\Request;
 use App\Models\ArticlesComment;
 use OpenApi\Annotations as OA;
+use App\Http\Requests\CreateCommentRequest;
 
 class ArticleCommentController extends ApiController
 {
@@ -21,7 +22,7 @@ class ArticleCommentController extends ApiController
     /**
      * @OA\Get(
      *     path="/api/v1/articles/{article}/comments",
-     *     summary="list of comments to the article",
+     *     summary="List of comments to the article",
      *     operationId="getCommentsList",
      *     tags={"comments"},
      *     @OA\Parameter(
@@ -53,13 +54,16 @@ class ArticleCommentController extends ApiController
         return response()->json($this->commentsFetcher->getCombinedReplicas($articleId, $orderingSets), 200, [], JSON_UNESCAPED_UNICODE | JSON_PRETTY_PRINT);
     }
 
-    public function addFirst(int $articleId, Request $request)
+    public function addFirst(CreateCommentRequest $request)
     {
-        $input['user_id'] = (int)$request->input('userDialer');
-        $input['article_id'] = $articleId;
-        $input['position'] = 1;
-        $input['body'] = (string)$request->input('articleCommentText');
-        $this->model::create($input);
+        // $input['user_id'] = (int)$request->input('userDialer');
+        // $input['article_id'] = $articleId;
+        // $input['position'] = 1;
+        // $input['body'] = (string)$request->input('articleCommentText');
+        // $this->model::create($input);
+
+        return parent::add($request);
+
         // return redirect()->route('api.v1.articles.comments', ['article' => $article]);
     }
 
@@ -74,34 +78,113 @@ class ArticleCommentController extends ApiController
         // return redirect()->route('articles.comments', ['article' => $article]);
     }
 
-    private function applyOrdering(int $articleId, array $orderingSets)
+    /**
+     * @OA\Get(
+     *     path="/api/v1/articles/{article}/comments/reSortByDate",
+     *     summary="Sort the list of article comments by the date of creation",
+     *     operationId="getCommentsListSortedByDate",
+     *     tags={"comments"},
+     *     @OA\Parameter(
+     *          name="article",
+     *          description="Articles id to show list",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer",
+     *          )
+     *      ),
+     *     @OA\Parameter(
+     *          name="direction",
+     *          description="Direction for sorting the list",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string",
+     *              enum={"asc", "desc"}
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="{ }")
+     * )
+     */
+    public function reSortByDate(int $articleId, OrderByDTO $orderingSets, Request $request)
     {
-        $this->orderingSets->userName = $orderingSets['userName'];
-        $this->orderingSets->email = $orderingSets['email'];
-        $this->orderingSets->selected = $orderingSets['selected'];
-        $this->orderingSets->createdAt = $orderingSets['createdAt'];
-        return $this->index($articleId, $this->orderingSets);
-    }
-    public function reSortByDate(int $articleId, Request $request)
-    {
-        $orderingSets = $request->input('orderingSets');
-        $orderingSets['createdAt'] = ($orderingSets['createdAt'] === 'desc') ? 'asc' : 'desc';
-        return $this->applyOrdering($articleId, $orderingSets);
+        $orderingSets->createdAt = $request->input('direction', 'desc');
+        return $this->index($articleId, $orderingSets);
     }
 
-    public function reSortByName(int $articleId, Request $request)
+    /**
+     * @OA\Get(
+     *     path="/api/v1/articles/{article}/comments/reSortByName",
+     *     summary="Sort the list of article comments by user name",
+     *     operationId="getCommentsListSortedByName",
+     *     tags={"comments"},
+     *     @OA\Parameter(
+     *          name="article",
+     *          description="Articles id to show list",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer",
+     *          )
+     *      ),
+     *     @OA\Parameter(
+     *          name="direction",
+     *          description="Direction for sorting the list",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string",
+     *              enum={"asc", "desc"}
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="{ }")
+     * )
+     */
+    public function reSortByName(int $articleId, OrderByDTO $orderingSets, Request $request)
     {
-        $orderingSets = $request->input('orderingSets');
-        $orderingSets['userName'] = ($orderingSets['userName'] === 'desc') ? 'asc' : 'desc';
-        $orderingSets['selected'] = 'userName';
-        return $this->applyOrdering($articleId, $orderingSets);
+        $orderingSets->selected = 'userName';
+        $orderingSets->userName = $request->input('direction', 'asc');
+        return $this->index($articleId, $orderingSets);
     }
 
-    public function reSortByEmail(int $articleId, Request $request)
+    /**
+     * @OA\Get(
+     *     path="/api/v1/articles/{article}/comments/reSortByEmail",
+     *     summary="Sort the list of article comments by user email",
+     *     operationId="getCommentsListSortedByEmail",
+     *     tags={"comments"},
+     *     @OA\Parameter(
+     *          name="article",
+     *          description="Articles id to show list",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer",
+     *          )
+     *      ),
+     *     @OA\Parameter(
+     *          name="direction",
+     *          description="Direction for sorting the list",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string",
+     *              enum={"asc", "desc"}
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="{ }")
+     * )
+     */
+    public function reSortByEmail(int $articleId, OrderByDTO $orderingSets, Request $request)
     {
-        $orderingSets = $request->input('orderingSets');
-        $orderingSets['email'] = ($orderingSets['email'] === 'desc') ? 'asc' : 'desc';
-        $orderingSets['selected'] = 'email';
-        return $this->applyOrdering($articleId, $orderingSets);
+        $orderingSets->email =  $request->input('direction', 'asc');
+        $orderingSets->selected = 'email';
+        return $this->index($articleId, $orderingSets);
     }
 }
