# storage/api-docs/api-docs.json
@@ -14,7 +14,7 @@
                 "tags": [
                     "comments"
                 ],
-                "summary": "list of comments to the article",
+                "summary": "List of comments to the article",
                 "operationId": "getCommentsList",
                 "parameters": [
                     {
@@ -36,6 +36,120 @@
                         "content": {
                             "application/json": {}
                         }
+                    }
+                }
+            }
+        },
+        "/api/v1/articles/{article}/comments/reSortByDate": {
+            "get": {
+                "tags": [
+                    "comments"
+                ],
+                "summary": "Sort the list of article comments by the date of creation",
+                "operationId": "getCommentsListSortedByDate",
+                "parameters": [
+                    {
+                        "name": "article",
+                        "in": "path",
+                        "description": "Articles id to show list",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "direction",
+                        "in": "query",
+                        "description": "Direction for sorting the list",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                "asc",
+                                "desc"
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{ }"
+                    }
+                }
+            }
+        },
+        "/api/v1/articles/{article}/comments/reSortByName": {
+            "get": {
+                "tags": [
+                    "comments"
+                ],
+                "summary": "Sort the list of article comments by user name",
+                "operationId": "getCommentsListSortedByName",
+                "parameters": [
+                    {
+                        "name": "article",
+                        "in": "path",
+                        "description": "Articles id to show list",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "direction",
+                        "in": "query",
+                        "description": "Direction for sorting the list",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                "asc",
+                                "desc"
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{ }"
+                    }
+                }
+            }
+        },
+        "/api/v1/articles/{article}/comments/reSortByEmail": {
+            "get": {
+                "tags": [
+                    "comments"
+                ],
+                "summary": "Sort the list of article comments by user email",
+                "operationId": "getCommentsListSortedByEmail",
+                "parameters": [
+                    {
+                        "name": "article",
+                        "in": "path",
+                        "description": "Articles id to show list",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "direction",
+                        "in": "query",
+                        "description": "Direction for sorting the list",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                "asc",
+                                "desc"
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{ }"
                     }
                 }
             }
